Add Railway deployment config: env vars for DB, CORS, port, uploads; Procfile, system.properties